--- a/mysite/GIS_Poster/templates/GIS_Poster/poster_create.html
+++ b/mysite/GIS_Poster/templates/GIS_Poster/poster_create.html
@@ -1,11 +1,12 @@
 {% block content %}
 
-<form action="" method="post">
+<form method="POST" class="poster-form" action="{% url 'poster_new' %}" enctype="multipart/form-data">
     {% csrf_token %}
-    <table>
-    {{ form.as_table }}
-    </table>
-    <input type="submit" value="Submit" />
-    
+    {{ form.as_p }}
+    {{ form.errors }}
+    {{ form.non_field_errors }}
+
+
+    <button type="submit" class="save btn btn-default">Save</button>
 </form>
 {% endblock %}
