--- a/mysite/GIS_Poster/templates/GIS_Poster/poster_create.html
+++ b/mysite/GIS_Poster/templates/GIS_Poster/poster_create.html
@@ -5,9 +5,10 @@
    		$("#id_PDFPoster").change(function () {
        	var first_name = $("input[name=first_name]").val();
        	var last_name = $("input[name=last_name]").val();	
-       	var year = $("input[name=Year]").val();
-       	var semester = $("input[name=Semester]").val();
-       	var course = $("input[name=Course_name]").val();
+       	var year = $('input[name="Year"]:checked').val();
+       	var semester = $('input[name="Semester"]:checked').val();
+       	var course = $('input[name="Course_name"]:checked').val();
+       	// var course = document.getElementById("Course_name").htmlFor;
        	console.log("pdf changed")
        	console.log(first_name)
        	console.log(last_name)
@@ -20,10 +21,16 @@
        		year_range = String(first_year) + "-" + String(year)
        	}else{
        		console.log("Semester is not spring")
-       		year_range = String(year) + "=" + String(year+1)
+       		next_year = parseInt(year)+1
+       		year_range = String(year) + "-" + String(next_year)
        	}
+       	console.log(course)
+       	var course_code = String(course).substring(0, String(course).indexOf("_"))
        	console.log(year_range)
-    	document.getElementById("posterpath").innerHTML = "The poster will be saved at: " + "S:/Posters/GIS Posters/" + first_name;
+       	console.log(course_code)
+
+    	document.getElementById("posterpath").innerHTML = "The poster will be saved at: " + "S:/Posters/GIS Posters/" + year_range + "/" +
+    	"PostersComplete" + semester + year + "/" + course + "/" + last_name + "_" + first_name + "_" + course_code + "_" + year + ".pdf";
      });
 
     	// document.getElementById("posterpath").innerHTML = "yesyesyes";
@@ -44,7 +51,8 @@
     		 {{field}}<br>
 	{% endfor %}
 
-	<p id="posterpath"> Blah and Blah</p>
+	<p id="posterpath"> </p>
+	
     {{ form.errors }}
     {{ form.non_field_errors }}
     
