Added help text to course form

--- a/mysite/GIS_Poster/templates/GIS_Poster/course_create.html
+++ b/mysite/GIS_Poster/templates/GIS_Poster/course_create.html
@@ -7,6 +7,6 @@
     {{ form.non_field_errors }}
 
 
-    <button type="submit" class="save btn btn-default">Save</button>
+    <button type="submit" class="save btn btn-default">Submit</button>
 </form>
 {% endblock %}
