--- a/mysite/GIS_Poster/templates/GIS_Poster/new_post.html
+++ b/mysite/GIS_Poster/templates/GIS_Poster/new_post.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html>
+{%extends 'base.html' %}
+{% block content %}
 <body>
 
-<h1>Congratulations</h1>
-
-<p>My first paragraph.</p>
+<p>Your poster has been succesfully submitted.</p>
 
 </body>
-</html>
+{% endblock %}
