--- a/mysite/GIS_Poster/templates/base.html
+++ b/mysite/GIS_Poster/templates/base.html
@@ -1,9 +1,9 @@
-{% load staticfiles %}<!doctype html>
+{% load staticfiles %}
 <html>
   <head>
     <meta charset="utf-8" />
     <title>{% block title %}GIS Poster Catalog Form{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'css/poster.css' %}">
+    <link rel="stylesheet" href="{% static '/css/poster.css' %}" type="text/css">
     {% block stylesheet %}{% endblock %}
   </head>
   <body>
@@ -15,7 +15,6 @@
       {% endblock %}
     </main>
     <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-    <script src="{% static 'js/app.js' %}"></script>
     {% block javascript %}{% endblock %}
   </body>
 </html>
