--- a/mysite/GIS_Poster/templates/GIS_Poster/course_create.html
+++ b/mysite/GIS_Poster/templates/GIS_Poster/course_create.html
@@ -1,10 +1,17 @@
+{%extends "base.html" %}
 {% block content %}
-
+    <header>
+      GIS Course Form
+    </header>
 <form method="POST" class="course-form" action="{% url 'course_new' %}" enctype="multipart/form-data">
     {% csrf_token %}
-    {{ form.as_p }}
+     {% for field in form %}
+    		<br><div class="label_tag">{{field.label_tag}}</div>
+    		 <div class="help_text">{{field.help_text}}</div>
+    		 {{field}}<br>
+	{% endfor %}
     {{ form.errors }}
-    {{ form.non_field_errors }}
+    {{ form.non_field_errors }} <br>
 
 
     <button type="submit" class="save btn btn-default">Submit</button>
