--- a/mysite/GIS_Poster/static/css/poster.css
+++ b/mysite/GIS_Poster/static/css/poster.css
@@ -1,19 +1,24 @@
 body {
-
+    font-family: "helvetica";
+    font-size: 85%;
     background-color: #EDF3F9;
     padding-left: 15px;
 }
 .label_tag {
+    font-family: "helvetica";
     color: #417dc1;
-  	font-size: 110%;
+  	font-size: 115%;
     font-weight: bold;
 }
 
 .help_text {
 	color: grey;
+    font-family: "helvetica";
+    font-size: 105%;
 }
 
 header {
+    font-family: "helvetica";
 	background-color: #417dc1;
 	text-align: center;
 	font-size: 30px;
