--- a/mysite/GIS_Poster/templates/GIS_Poster/new_post.html
+++ b/mysite/GIS_Poster/templates/GIS_Poster/new_post.html
@@ -1,5 +1,8 @@
 {%extends 'base.html' %}
 {% block content %}
+ <header>
+      GIS Poster Catalog Form
+    </header>
 <body>
 
 <p>Your poster has been succesfully submitted.</p>
