--- a/mysite/GIS_Poster/templates/GIS_Poster/poster_update_form.html
+++ b/mysite/GIS_Poster/templates/GIS_Poster/poster_update_form.html
@@ -1,12 +1,26 @@
+{%extends 'base.html' %}
+{% load staticfiles %}
 {% block content %}
 
-<form method="GET" class="poster-form" action="{% url 'poster_edit' %}" enctype="multipart/form-data">
+    <header>
+      GIS Poster Catalog Form
+    </header>
+    <a href="/accounts/logout">Logout</a>
+<form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
-    {{ form.as_p }}
+
+    {% for field in form %}
+    		<br><div class="label_tag">{{field.label_tag}}</div>
+    		 <div class="help_text">{{field.help_text}}</div>
+    		 {{field}}<br>
+	{% endfor %}
+	<p id="posterpath"> </p>
+	<br>
     {{ form.errors }}
     {{ form.non_field_errors }}
+    
 
 
-    <button type="submit" class="save btn btn-default">Save</button>
+    <button type="submit" class="submit-button" value="Update">Submit</button>
 </form>
 {% endblock %}
