--- a/mysite/GIS_Poster/templates/base.html
+++ b/mysite/GIS_Poster/templates/base.html
@@ -2,18 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>{% block title %}GIS Poster Catalog Form{% endblock %}</title>
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css" media="all" />
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js" type="text/javascript">
-    </script> <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"></script>
-
+    <title>GIS Poster Catalog Form</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+    <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.7/jquery.validate.min.js"></script>
     <link rel="stylesheet" href="{% static '/css/poster.css' %}" type="text/css">
-    {% block stylesheet %}{% endblock %}
   </head>
   <body>
     <main>
-      {% block content %}
-      {% endblock %}
+      
+      {% block content %}{% endblock %}
     </main>
+    {% block javascript %}{% endblock %}
   </body>
 </html>
